import {runCases} from "./code-generation-test-case-runner";

runCases("PrefixUnaryExpression", "prefix-unary-expression");
